src/test/deca/context/valid/tests/12_Not.deca
// Description:
//    Test Not
//
// Historique:
//    cree le 16/01/2022

{
        boolean a = !false;
}
