src/test/deca/context/invalid/11_voidType.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: type void
// 
// Historique:
//    cree le 01/01/2022

{

   // Doit etre refuse.
   void a;
}
